# task_generator

./: CMakeLists.txt  README.md
sources/: sources.cmake
sources/encoding_and_decoding_task/: encoding_and_decoding_task_sources.cmake
sources/encoding_and_decoding_task/phono_codes/: alphabet.cpp  alphabet.hpp  encoding_information_count_symbols_task.cpp  encoding_information_count_symbols_task.hpp  encoding_information_task.cpp  encoding_information_task.hpp  encoding_information_task_minimal_code_task.cpp  encoding_information_task_minimal_code_task.hpp  encoding_information_task_type.hpp  letter.cpp  letter.hpp  vocabulary.cpp  vocabulary.hpp
sources/encoding_and_decoding_task/transmission/: audio_file_data.cpp  audio_file_data.hpp  (+7 more)
sources/generator/: generator.cpp  generator.hpp  generator_sources.cmake  main.cpp
sources/graph_task/: graph.cpp  graph.hpp  graph_analysis.cpp  graph_analysis.hpp  graph_analysis_default.cpp  graph_analysis_default.hpp  graph_analysis_miss_road.cpp  graph_analysis_miss_road.hpp  graph_analysis_star.cpp  graph_analysis_star.hpp  graph_analysis_type.hpp  graph_task_sources.cmake  vertex.cpp  vertex.hpp
sources/task/: condition.cpp  condition.hpp  task.cpp  task.hpp  task_sources.cmake  task_type.hpp
sources/truth_table_task/: building_logical_table_task.cpp  building_logical_table_task.hpp  logical_expression.cpp  logical_expression.hpp  logical_expression_command.hpp  logical_expression_pattern_list.hpp  logical_table.cpp  logical_table.hpp  logical_variable.cpp  logical_variable.hpp  truth_table_task_sources.cmake
